# CSC8508

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CMakePresets.json  CSC8503.sln  CSC8508.sln  CopyOfCMakeCache.txt  DamageableComponent.cpp  Generate.bat  ItemComponent.h  PS5CSC8508.sln  README.md  README.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  install_opus.bat
Assets/: Default.pfab
AudioEngine/: AudioEngine.cpp  AudioEngine.h  AudioEngine.sln  AudioListenerComponent.cpp  AudioListenerComponent.h  AudioObject.h  AudioSourceComponent.h  CMakeLists.txt  NetworkedListenerComponent.h
CSC8508/: CMakeLists.txt  CSC8508.vcxproj  CSC8508.vcxproj.filters  ComponentAssemblyDefiner.cpp  ComponentAssemblyDefiner.h  DamageableComponent.h  DamageableNetworkComponent.cpp  DamageableNetworkComponent.h  EOSIPDistribution.cpp  EOSIPDistribution.h  EOSInitialisationManager.cpp  EOSInitialisationManager.h  EOSLobbyFunctions.cpp  EOSLobbyFunctions.h  EOSLobbyManager.cpp  EOSLobbyManager.h  EOSLobbySearch.cpp  EOSLobbySearch.h  EOSMenu.cpp  EOSMenu.h  EditorGame.cpp  EditorGame.h  FallDamageComponent.h  GameInstantiations.cpp  GameManagerComponent.cpp  GameManagerComponent.h  GameNetworkedManagerComponent.cpp  GameNetworkedManagerComponent.h  GameTechRenderer.cpp  GameTechRenderer.h  GameTechRendererInterface.cpp  GameTechRendererInterface.h  InventoryManagerComponent.cpp  InventoryManagerComponent.h  InventoryNetworkManagerComponent.cpp  InventoryNetworkManagerComponent.h  ItemComponent.cpp  ItemComponent.h  JumpWaitStateComponent.h  Lobby.cpp  (+22 more)
CSC8508/Attributes/: DamageableComponent.cpp  DamageableComponent.h  DamageableNetworkComponent.h  FallDamageComponent.h  RespawnComponent.h  StaminaComponent.cpp  StaminaComponent.h  StaminaNetworkComponent.h
CSC8508/BehaviourStates/: JumpWaitStateComponent.h
CSC8508/Core/: ComponentAssemblyDefiner.cpp  ComponentAssemblyDefiner.h  EditorGame.cpp  EditorGame.h  GameCore.cpp  GameCore.h  GameInstantiations.cpp  GameTechRendererInterface.h  Main.cpp  NetworkedGame.cpp  NetworkedGame.h  TutorialGame.cpp  TutorialGame.h
CSC8508/DungeonGeneration/: DoorLocation.h  Dungeon.cpp  Dungeon.h  DungeonComponent.cpp  DungeonComponent.h  Room.cpp  Room.h  RoomComponent.cpp  RoomComponent.h  RoomManager.cpp  RoomManager.h  RoomPrefab.cpp  RoomPrefab.h
CSC8508/EditorCore/: EditorCamera.h  EditorWindow.h  EditorWindowManager.cpp  EditorWindowManager.h  FileExplorer.cpp  FileExplorer.h  Hierarchy.cpp  Hierarchy.h  Inspector.cpp  Inspector.h  Primatives.cpp  ToolsBar.cpp  ToolsBar.h
CSC8508/Game/: GameManagerComponent.cpp  GameManagerComponent.h  GameNetworkedManagerComponent.h
CSC8508/Inventory/: InventoryManagerComponent.cpp  InventoryManagerComponent.h  InventoryNetworkManagerComponent.cpp  InventoryNetworkManagerComponent.h  ItemComponent.h
CSC8508/Legacy/: EnemyComponent.cpp  MainMenu.cpp  MainMenu.h  NavMeshAgent.h  PlayerComponent.cpp  PlayerComponent.h  PlayerGameObject.h  StateComponent.cpp
CSC8508/Map/: DoorLocation.h  DungeonComponent.cpp  DungeonComponent.h  RoomComponent.cpp  RoomComponent.h  RoomManager.cpp  RoomManager.h  RoomPrefab.cpp  RoomPrefab.h
CSC8508/NPC/: EnemyComponent.h
CSC8508/Navigation/: NavMeshComponent.h
CSC8508/PS5/: GameTechAGCRenderer.cpp  GameTechAGCRenderer.h  main (ps5).cpp
CSC8508/Player/: PlayerAnimation.h  PlayerComponent.cpp  PlayerComponent.h
CSC8508/Scene/: Scene.h  SceneManager.h
CSC8508CoreClasses/: AnimationComponent.cpp  AnimationComponent.h  AnimationMap.cpp  AssetManager.h  BindingManager.h  BoundsComponent.cpp  BoundsComponent.h  CMakeLists.txt  CSC8508CoreClasses.vcxproj  CSC8508CoreClasses.vcxproj.filters  CameraComponent.h  CollisionDetection.cpp  CollisionDetection.h  CollisionEvent.h  CollisionVolume.h  ComponentManager.h  DamageableNetworkComponent.h  FallDamageComponent.cpp  FallDamageComponent.h  FullTransformNetworkComponent.h  GameClient.cpp  GameNetworkedManagerComponent.cpp  GameNetworkedManagerComponent.h  GameObject.cpp  GameObject.h  GameServer.cpp  GameServer.h  GameWorld.cpp  GameWorld.h  IComponent.cpp  IComponent.h  INetworkComponent.cpp  INetworkComponent.h  INetworkDeltaComponent.cpp  INetworkDeltaComponent.h  ISerializable.h  IState.h  IStateComponent.cpp  IStateComponent.h  IStateTransition.h  (+35 more)
CSC8508CoreClasses/DualTree/: DualTree.cpp  DualTree.h  DualTreeBranch.cpp  DualTreeBranch.h  DualTreeLeaf.cpp  DualTreeLeaf.h  DualTreeNode.cpp  DualTreeNode.h
CSC8508CoreClasses/KDTree/: KDTree.h  KDTreeBranch.h  KDTreeEntry.h  KDTreeLeaf.h  KDTreeNode.h
CSC8508CoreClasses/enet/: enet.h  enet.sln  unix.c
EOSFramework/: CMakeLists.txt  EOSInitialisationManager.cpp  EOSInitialisationManager.h  EOSLobbyFunctions.cpp  EOSLobbyFunctions.h  EOSLobbyManager.cpp  EOSLobbyManager.h  EOSLobbySearch.cpp  EOSLobbySearch.h  EOSMenu.cpp  EOSMenu.h
Event/: Event.h  EventListener.h  EventManager.h
ImGui/: CMakeLists.txt  imgui.h  imgui_widgets.cpp
ImGui/PS5/: imgui_impl_ps.cpp  imgui_impl_ps.h  imgui_impl_ps_shader_common.h  imgui_impl_ps_shader_p.pssl  imgui_impl_ps_shader_vv.pssl
ImGui/PS5/orbis/: imgui_libfont_orbis.cpp
ImGui/PS5/prospero/: imgui_libfont_prospero.cpp
ImGui/WIN/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp
NCLCoreClasses/: Assets.h  Axis.h  Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  Controller.cpp  Controller.h  GameTimer.h  IGameTechRenderer.cpp  IGameTechRenderer.h  Keyboard.h  KeyboardMouseController.cpp  KeyboardMouseController.h  Mesh.h  MeshAnimation.cpp  (+8 more)
UISystem/: AudioSliders.cpp  AudioSliders.h  CMakeLists.txt  EOSLobbyMenuUI.cpp  EOSLobbyMenuUI.h  EOSMenuUI.cpp  EOSMenuUI.h  FramerateUI.cpp  FramerateUI.h  GameOverUI.cpp  GameOverUI.h  GameVictoryUI.cpp  GameVictoryUI.h  Healthbar.cpp  Healthbar.h  InventoryUI.cpp  InventoryUI.h  LobbySearch.cpp  LobbySearch.h  MainMenuUI.cpp  MainMenuUI.h  PauseUI.cpp  PauseUI.h  StaminaBar.cpp  StaminaBar.h  TimerUI.cpp  TimerUI.h  UIElements.h  UIElementsGroup.cpp  UIElementsGroup.h  UIPlayStation.cpp  UIPlayStation.h  UISystem.cpp  UISystem.h  UIWindows.cpp  UIWindows.h
(+123 files in other folders)
